fix ide agent support